--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "svelte": "^3.55.1",
     "svelte-check": "^2.10.3",
     "svelte-navigator": "^3.2.2",
+    "svelte-paginate": "^0.1.0",
     "tslib": "^2.5.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
