--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@felte/validator-yup": "^1.0.11",
+    "@supabase/supabase-js": "^2.7.1",
     "@tanstack/svelte-query": "^4.24.4",
     "axios": "^1.3.2",
     "felte": "^1.2.7",
